syntax = "proto3";

option go_package="./;proto";

package proto;

service CacheService {
    rpc Get (GetRequest) returns (GetResponse);
    rpc Set (SetRequest) returns (SetResponse);
    rpc Del (DelRequest) returns (DelResponse);
}

message GetRequest {
    string key = 1;
}

message SetRequest {
    string key = 1;
    repeated string value = 2;
}

message DelRequest {
    string key = 1;
}

message GetResponse {
    repeated string value = 1;
}

message SetResponse {

}

message DelResponse {
    int32 delCount = 1;
}